Added tests for existing elements

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,3 +10,8 @@ line-length = 79
 [tool.isort]
 profile = "black"
 line_length = 79
+
+[tool.pytest.ini_options]
+filterwarnings = [
+	"ignore::DeprecationWarning"
+]
