changed plugin name version bump

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = napari-PLACEHOLDER
-version = 0.0.1
+name = MSI-Explorer
+version = 0.0.6
 description = A simple plugin to use with napari
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -49,7 +49,7 @@ where = src
 
 [options.entry_points]
 napari.manifest =
-    napari-PLACEHOLDER = napari_placeholder:napari.yaml
+    MSI-Explorer = msi_explorer:napari.yaml
 
 [options.extras_require]
 testing =
