--- a/tox.ini
+++ b/tox.ini
@@ -29,4 +29,4 @@ passenv =
     PYVISTA_OFF_SCREEN
 extras =
     testing
-commands = pytest -v --color=yes --cov=napari_placeholder --cov-report=xml
+commands = pytest -v --color=yes --cov=MSI-Explorer --cov-report=xml
