--- a/environment.yml
+++ b/environment.yml
@@ -20,181 +20,185 @@ dependencies:
   - wheel=0.40.0=pyhd8ed1ab_1
   - xz=5.2.6=h8d14728_0
   - pip:
-    - alabaster==0.7.13
-    - anyio==3.7.1
-    - aplus==0.11.0
-    - app-model==0.2.0
-    - appdirs==1.4.4
-    - astropy==5.3.1
-    - asttokens==2.2.1
-    - attrs==23.1.0
-    - babel==2.12.1
-    - backcall==0.2.0
-    - blake3==0.3.3
-    - bqplot==0.12.40
-    - branca==0.6.0
-    - build==0.10.0
-    - cachetools==5.3.1
-    - cachey==0.2.1
-    - certifi==2023.5.7
-    - charset-normalizer==3.2.0
-    - click==8.1.6
-    - cloudpickle==2.2.1
-    - colorama==0.4.6
-    - comm==0.1.3
-    - contourpy==1.1.0
-    - cycler==0.11.0
-    - dask==2023.7.0
-    - debugpy==1.6.7
-    - decorator==5.1.1
-    - docstring-parser==0.15
-    - docutils==0.17.1
-    - exceptiongroup==1.1.2
-    - executing==1.2.0
-    - fastapi==0.100.0
-    - filelock==3.12.2
-    - fonttools==4.41.0
-    - freetype-py==2.4.0
-    - frozendict==2.3.8
-    - fsspec==2023.6.0
-    - future==0.18.3
-    - h11==0.14.0
-    - h5py==3.9.0
-    - heapdict==1.0.1
-    - hsluv==5.0.3
-    - httptools==0.6.0
-    - idna==3.4
-    - imageio==2.31.1
-    - imagesize==1.4.1
-    - importlib-metadata==6.8.0
-    - importlib-resources==6.0.0
-    - in-n-out==0.1.8
-    - ipydatawidgets==4.3.5
-    - ipykernel==6.24.0
-    - ipyleaflet==0.17.3
-    - ipympl==0.9.3
-    - ipython==8.14.0
-    - ipython-genutils==0.2.0
-    - ipyvolume==0.6.3
-    - ipyvue==1.9.2
-    - ipyvuetify==1.8.10
-    - ipywebrtc==0.6.0
-    - ipywidgets==8.0.7
-    - jedi==0.18.2
-    - jinja2==3.1.2
-    - jsonschema==4.18.4
-    - jsonschema-specifications==2023.7.1
-    - jupyter-client==8.3.0
-    - jupyter-core==5.3.1
-    - jupyterlab-widgets==3.0.8
-    - kiwisolver==1.4.4
-    - lazy-loader==0.3
-    - llvmlite==0.40.1
-    - locket==1.0.0
-    - magicgui==0.7.2
-    - markdown-it-py==3.0.0
-    - markupsafe==2.1.3
-    - matplotlib==3.7.2
-    - matplotlib-inline==0.1.6
-    - mdurl==0.1.2
-    - msi-explorer==0.1.1
-    - mypy-extensions==1.0.0
-    - napari==0.4.18
-    - napari-console==0.0.8
-    - napari-plugin-engine==0.2.0
-    - napari-plugin-manager==0.1.0a2
-    - napari-svg==0.1.10
-    - nest-asyncio==1.5.6
-    - networkx==3.1
-    - npe2==0.7.1
-    - numba==0.57.1
-    - numpy==1.24.4
-    - numpydoc==1.5.0
-    - packaging==23.1
-    - pandas==2.0.3
-    - parso==0.8.3
-    - partd==1.4.0
-    - pickleshare==0.7.5
-    - pillow==10.0.0
-    - pint==0.22
-    - platformdirs==3.9.1
-    - pooch==1.7.0
-    - progressbar2==4.2.0
-    - prompt-toolkit==3.0.39
-    - psutil==5.9.5
-    - psygnal==0.9.1
-    - pure-eval==0.2.2
-    - pyarrow==12.0.1
-    - pydantic==1.10.11
-    - pyerfa==2.0.0.3
-    - pygments==2.15.1
-    - pyimzml==1.5.3
-    - pyopengl==3.1.7
-    - pyparsing==3.0.9
-    - pyproject-hooks==1.0.0
-    - pyqt5==5.15.9
-    - pyqt5-qt5==5.15.2
-    - pyqt5-sip==12.12.1
-    - python-dateutil==2.8.2
-    - python-dotenv==1.0.0
-    - python-utils==3.7.0
-    - pythreejs==2.4.2
-    - pytz==2023.3
-    - pywavelets==1.4.1
-    - pywin32==306
-    - pyyaml==6.0.1
-    - pyzmq==25.1.0
-    - qtconsole==5.4.3
-    - qtpy==2.3.1
-    - referencing==0.30.0
-    - requests==2.31.0
-    - rich==13.4.2
-    - rpds-py==0.9.2
-    - scikit-image==0.21.0
-    - scipy==1.11.1
-    - six==1.16.0
-    - sniffio==1.3.0
-    - snowballstemmer==2.2.0
-    - sphinx==4.5.0
-    - sphinxcontrib-applehelp==1.0.4
-    - sphinxcontrib-devhelp==1.0.2
-    - sphinxcontrib-htmlhelp==2.0.1
-    - sphinxcontrib-jsmath==1.0.1
-    - sphinxcontrib-qthelp==1.0.3
-    - sphinxcontrib-serializinghtml==1.1.5
-    - stack-data==0.6.2
-    - starlette==0.27.0
-    - superqt==0.4.1
-    - tabulate==0.9.0
-    - tifffile==2023.7.10
-    - tomli==2.0.1
-    - tomli-w==1.0.0
-    - toolz==0.12.0
-    - tornado==6.3.2
-    - tqdm==4.65.0
-    - traitlets==5.9.0
-    - traittypes==0.2.1
-    - typer==0.9.0
-    - typing-extensions==4.7.1
-    - tzdata==2023.3
-    - urllib3==2.0.3
-    - uvicorn==0.23.1
-    - vaex==4.16.0
-    - vaex-astro==0.9.3
-    - vaex-core==4.16.1
-    - vaex-hdf5==0.14.1
-    - vaex-jupyter==0.8.1
-    - vaex-ml==0.18.1
-    - vaex-server==0.8.1
-    - vaex-viz==0.5.4
-    - vispy==0.12.2
-    - watchfiles==0.19.0
-    - wcwidth==0.2.6
-    - websockets==11.0.3
-    - wheezy-template==3.1.0
-    - widgetsnbextension==4.0.8
-    - wrapt==1.15.0
-    - xarray==2023.7.0
-    - xyzservices==2023.7.0
-    - zipp==3.16.2
-prefix: c:\Anaconda3\envs\napari-env
+      - alabaster==0.7.13
+      - anyio==3.7.1
+      - aplus==0.11.0
+      - app-model==0.2.0
+      - appdirs==1.4.4
+      - astropy==5.3.1
+      - asttokens==2.2.1
+      - attrs==23.1.0
+      - babel==2.12.1
+      - backcall==0.2.0
+      - blake3==0.3.3
+      - bqplot==0.12.40
+      - branca==0.6.0
+      - build==0.10.0
+      - cachetools==5.3.1
+      - cachey==0.2.1
+      - certifi==2023.5.7
+      - charset-normalizer==3.2.0
+      - click==8.1.6
+      - cloudpickle==2.2.1
+      - colorama==0.4.6
+      - comm==0.1.3
+      - contourpy==1.1.0
+      - cycler==0.11.0
+      - dask==2023.7.0
+      - debugpy==1.6.7
+      - decorator==5.1.1
+      - docstring-parser==0.15
+      - docutils==0.17.1
+      - exceptiongroup==1.1.2
+      - executing==1.2.0
+      - fastapi==0.100.0
+      - filelock==3.12.2
+      - fonttools==4.41.0
+      - freetype-py==2.4.0
+      - frozendict==2.3.8
+      - fsspec==2023.6.0
+      - future==0.18.3
+      - h11==0.14.0
+      - h5py==3.9.0
+      - heapdict==1.0.1
+      - hsluv==5.0.3
+      - httptools==0.6.0
+      - idna==3.4
+      - imageio==2.31.1
+      - imagesize==1.4.1
+      - importlib-metadata==6.8.0
+      - importlib-resources==6.0.0
+      - in-n-out==0.1.8
+      - iniconfig==2.0.0
+      - ipydatawidgets==4.3.5
+      - ipykernel==6.24.0
+      - ipyleaflet==0.17.3
+      - ipympl==0.9.3
+      - ipython==8.14.0
+      - ipython-genutils==0.2.0
+      - ipyvolume==0.6.3
+      - ipyvue==1.9.2
+      - ipyvuetify==1.8.10
+      - ipywebrtc==0.6.0
+      - ipywidgets==8.0.7
+      - jedi==0.18.2
+      - jinja2==3.1.2
+      - jsonschema==4.18.4
+      - jsonschema-specifications==2023.7.1
+      - jupyter-client==8.3.0
+      - jupyter-core==5.3.1
+      - jupyterlab-widgets==3.0.8
+      - kiwisolver==1.4.4
+      - lazy-loader==0.3
+      - llvmlite==0.40.1
+      - locket==1.0.0
+      - magicgui==0.7.2
+      - markdown-it-py==3.0.0
+      - markupsafe==2.1.3
+      - matplotlib==3.7.2
+      - matplotlib-inline==0.1.6
+      - mdurl==0.1.2
+      - msi-explorer==0.2.0
+      - mypy-extensions==1.0.0
+      - napari==0.4.18
+      - napari-console==0.0.8
+      - napari-plugin-engine==0.2.0
+      - napari-plugin-manager==0.1.0a2
+      - napari-svg==0.1.10
+      - nest-asyncio==1.5.6
+      - networkx==3.1
+      - npe2==0.7.1
+      - numba==0.57.1
+      - numpy==1.24.4
+      - numpydoc==1.5.0
+      - packaging==23.1
+      - pandas==2.0.3
+      - parso==0.8.3
+      - partd==1.4.0
+      - pickleshare==0.7.5
+      - pillow==10.0.0
+      - pint==0.22
+      - platformdirs==3.9.1
+      - pluggy==1.2.0
+      - pooch==1.7.0
+      - progressbar2==4.2.0
+      - prompt-toolkit==3.0.39
+      - psutil==5.9.5
+      - psygnal==0.9.1
+      - pure-eval==0.2.2
+      - pyarrow==12.0.1
+      - pydantic==1.10.11
+      - pyerfa==2.0.0.3
+      - pygments==2.15.1
+      - pyimzml==1.5.3
+      - pyopengl==3.1.7
+      - pyparsing==3.0.9
+      - pyproject-hooks==1.0.0
+      - pyqt5==5.15.9
+      - pyqt5-qt5==5.15.2
+      - pyqt5-sip==12.12.1
+      - pytest==7.4.0
+      - pytest-qt==4.2.0
+      - python-dateutil==2.8.2
+      - python-dotenv==1.0.0
+      - python-utils==3.7.0
+      - pythreejs==2.4.2
+      - pytz==2023.3
+      - pywavelets==1.4.1
+      - pywin32==306
+      - pyyaml==6.0.1
+      - pyzmq==25.1.0
+      - qtconsole==5.4.3
+      - qtpy==2.3.1
+      - referencing==0.30.0
+      - requests==2.31.0
+      - rich==13.4.2
+      - rpds-py==0.9.2
+      - scikit-image==0.21.0
+      - scipy==1.11.1
+      - six==1.16.0
+      - sniffio==1.3.0
+      - snowballstemmer==2.2.0
+      - sphinx==4.5.0
+      - sphinxcontrib-applehelp==1.0.4
+      - sphinxcontrib-devhelp==1.0.2
+      - sphinxcontrib-htmlhelp==2.0.1
+      - sphinxcontrib-jsmath==1.0.1
+      - sphinxcontrib-qthelp==1.0.3
+      - sphinxcontrib-serializinghtml==1.1.5
+      - stack-data==0.6.2
+      - starlette==0.27.0
+      - superqt==0.4.1
+      - tabulate==0.9.0
+      - tifffile==2023.7.10
+      - tomli==2.0.1
+      - tomli-w==1.0.0
+      - toolz==0.12.0
+      - tornado==6.3.2
+      - tqdm==4.65.0
+      - traitlets==5.9.0
+      - traittypes==0.2.1
+      - typer==0.9.0
+      - typing-extensions==4.7.1
+      - tzdata==2023.3
+      - urllib3==2.0.3
+      - uvicorn==0.23.1
+      - vaex==4.16.0
+      - vaex-astro==0.9.3
+      - vaex-core==4.16.1
+      - vaex-hdf5==0.14.1
+      - vaex-jupyter==0.8.1
+      - vaex-ml==0.18.1
+      - vaex-server==0.8.1
+      - vaex-viz==0.5.4
+      - vispy==0.12.2
+      - watchfiles==0.19.0
+      - wcwidth==0.2.6
+      - websockets==11.0.3
+      - wheezy-template==3.1.0
+      - widgetsnbextension==4.0.8
+      - wrapt==1.15.0
+      - xarray==2023.7.0
+      - xyzservices==2023.7.0
+      - zipp==3.16.2
+prefix: C:\Users\lampen\AppData\Local\anaconda3\envs\napari-env
