Added colorbar removed ugly boxes

--- a/setup.cfg
+++ b/setup.cfg
@@ -36,6 +36,7 @@ install_requires =
     pyimzml
     matplotlib
     vaex
+    opencv-python
 
 python_requires = >=3.8
 include_package_data = True
