--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
 name = MSI-Explorer
-version = 0.2.1
+version = 0.2.2
 description = A simple plugin to use with napari
 long_description = file: README.md
 long_description_content_type = text/markdown
@@ -36,6 +36,7 @@ install_requires =
     pyimzml
     matplotlib
     vaex
+    opencv-python
 
 python_requires = >=3.8
 include_package_data = True
