restored changes to metadata reading bumped version implemented user choice for converting to centroid plotting based on centroid vs profile data

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = MSI-Explorer
-version = 0.2.2
-description = A simple plugin to use with napari
+version = 0.2.3
+description = a napari plug-in for biochemical annotation of mass spectrometry imaging data
 long_description = file: README.md
 long_description_content_type = text/markdown
 url = https://github.com/MMV-Lab/MSI-Explorer
